# primality_test_with_openmp

./: .gitignore  CMakeLists.txt  README.md  benchmark_wrapper.c  benchmark_wrapper.h  build_and_run_and_delete.sh  integer_addition_up_to_n.c  integer_addition_up_to_n.h  integer_primality_test.c  integer_primality_test.h  main.c  primality_test.c  primality_test.h
